<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rotor_background2"
    tools:context=".Rotors">

    <TextView
        android:id="@+id/rotor_selection_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/rotors_choose"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:orientation="horizontal">

        <!-- Per selezionare il primo rotore, testo e spinner -->
        <TextView
            android:id="@+id/rotor_selection_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/rotors_choose1"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAlignment="viewEnd" />
    </LinearLayout>
    <!-- Per verificare che si sia selezionato il rotore in modo corretto -->

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:orientation="horizontal">
        <!-- Per selezionare il secondo rotore, testo e spinner -->
        <TextView
            android:id="@+id/rotor_selection_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/rotors_choose2"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:orientation="horizontal">
        <!-- Per selezionare il terzo rotore, testo e spinner -->
        <TextView
            android:id="@+id/rotor_selection_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/rotors_choose3"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:orientation="horizontal">
        <!-- Per selezionare il riflettore, testo e spinner -->
        <TextView
            android:id="@+id/rotor_selection_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/rotors_reflector"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="181dp"
        android:text="@string/start_selection"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="199dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/third_letter"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_letter"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_letter"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/rotor_selection_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="223dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/letter_selector_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/letter_selector_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/letter_selector_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="318dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/button2"
            android:onClick="save"
            android:text="@string/save"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/button2"
            android:onClick="reset"
            android:text="@string/reset1"
            android:textColor="@android:color/black"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="263dp"
        android:text="@string/rotor_letter"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/rotor_selection_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="282dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/reflector_choose"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/reflector_selection_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAlignment="viewEnd" />
    </LinearLayout>

</RelativeLayout>